--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>エセChat GPT</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
+<body class="dark-mode">
   <div id="chat-container">
     <div id="message-area"></div>
     <input type="text" id="user-input" placeholder="メッセージを入力してください">
