--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>エセChat GPT</title>
+  <title>Not GPT</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body class="dark-mode">
